Step 7 - green plane

--- a/zombies-vs-humans/client/index.html
+++ b/zombies-vs-humans/client/index.html
@@ -22,7 +22,7 @@
     <!-- Canvas element for ThreeJS rendering -->
     <canvas id="gameCanvas"></canvas>
     
-    <!-- Load main JavaScript file -->
-    <script src="main.js"></script>
+    <!-- Load main JavaScript file as a module to support ES6 imports -->
+    <script type="module" src="main.js"></script>
 </body>
 </html> 
